Updated Installation (markdown)